--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<script>
 			document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
 		</script>
-        <script src="../common/js/jquery-1.9.1.min.js"></script>
+        <script src="common/js/jquery-1.9.1.min.js"></script>
 
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
@@ -684,7 +684,7 @@ nuimotion.Events.Gestures.Wave.types =
 					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
 					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-                    { src: '../common/js/nuimotion-sockets.js', async: true, condition: function() { return !!document.body.classList; } },
+                    { src: 'common/js/nuimotion-sockets.js', async: true, condition: function() { return !!document.body.classList; } },
                     { src: 'plugin/nuimotion/nuimotion.js', async: true, condition: function() { return !!document.body.classList; } },
                     { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
 					// { src: 'plugin/search/search.js', async: true, condition: function() { return !!document.body.classList; } }
