modded short.html lightly for text changes

--- a/short.html
+++ b/short.html
@@ -356,8 +356,8 @@
                 </section>
 
                 <section>
-                    <h2>My Gift to You</h2>
-                    <h3>I made an addon!</h3>
+                    <h2>I made something!</h2>
+                    <h3>A Node.js AddOn</h3>
 
                     <p>
                         <img src="./images/nodejs.png"/>
@@ -523,7 +523,7 @@
                         <li>Websockets are the most obvious way to use web tech</li>
                         <li>Make a desktop application with App.js or Node Webkit</li>
                         <li>OpenNI projects a $15b 3D sensing industry by 2018</li>
-                        <li>Tiny Primensense Carmine sensors are being sold in bulk to device manufacturers</li>
+                        <li>Tiny Primesense Carmine sensors are being sold in bulk to device manufacturers</li>
                         <li>Lets keep it within our reach!</li>
                     </ul>
                 </section>
